--- a/src/components/PrimaryButton/PrimaryButton.css
+++ b/src/components/PrimaryButton/PrimaryButton.css
@@ -11,6 +11,7 @@
   text-align: center;
   border: none;
   outline: 2px solid #F7B21F;
+  cursor: pointer;
   /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); */
 }
 
