--- a/src/components/UserProjectsPage/UserProjectsPage.css
+++ b/src/components/UserProjectsPage/UserProjectsPage.css
@@ -15,17 +15,6 @@
     width: 100%;
 }
 
-.FooterRow{
-    width: 100%;
-    bottom: 0;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    color: #06222F;
-    margin: 30px 30px;
-}
 
 .ProjectList{
     display: flex;
